--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-session": "^1.2.1",
+    "bcrypt": "^1.0.2",
     "formidable": "^1.1.1",
     "handlebars": "^4.0.6",
+    "node-session": "^1.2.1",
     "sqlite3": "^3.1.8"
   }
 }
