--- a/app/config.json
+++ b/app/config.json
@@ -9,6 +9,7 @@
     },
     "sessions": {
         "secret": "Q3UBzdH9GEfiRCTKbi5MTPyChpzXLsTD",
+        "lifetime": 1800000,
         "files": "./storage/sessions",
         "encrypt": true,
         "login_route": "/session/login",
